sprint16/feature/fov-changes
Squashed commit of the following:

commit 6871c8c6b4d5f2b5294618afaa566fa3926dc5e8
Author: puneet.babbar <pbabbar2@sapient.com>
Date:   Fri Nov 3 12:18:03 2017 +0000

    added header to downstream call

commit 07141f17561b276dc525057791e2768c769f92a9
Author: puneet.babbar <pbabbar2@sapient.com>
Date:   Thu Nov 2 17:58:54 2017 +0000

    added header to downstream call

commit 715b2aff8709722c17038328cbf8d47234ec95b0
Author: parvez.alam <palam@sapient.com>
Date:   Thu Nov 2 17:23:17 2017 +0000

    Fixed unit test case

commit e81881449a8dc43b947288810a594f99817f3af7
Author: parvez.alam <palam@sapient.com>
Date:   Thu Nov 2 10:23:43 2017 +0000

    Change header x-lbg-fov-indicator type boolean to Boolean

commit bf0aec17995e18e2118cc670e03df248241ad81b
Author: parvez.alam <palam@sapient.com>
Date:   Wed Nov 1 13:03:20 2017 +0000

    FOV changed - Added optional header  x-lbg-fov-indicator
